--- a/Challenges/04-Fourth-deliverable-challenge/src/views/home.handlebars
+++ b/Challenges/04-Fourth-deliverable-challenge/src/views/home.handlebars
@@ -1,10 +1,21 @@
-<h2>Products added</h2>
+<h2>Products</h2>
 
 <section>
-    <ul id="list-of-products">
-        
-    </ul>
+    <div class="container-handlebars">
+        {{#if products.length}}
+        {{#each products}}
+        <div class="card-handlebars">
+            <p class="title-handlebars">{{title}}</p>
+            <p class="description-handlebars">{{description}}</p>
+            <p class="price-handlebars">${{price}}</p>
+        </div>
+        {{/each}}
+        {{else}}
+        <p>no tenemos productos</p>
+        {{/if}}
+    </div>
 </section>
 
-<script src="/socket.io/socket.io.js"></script>
-<script src="/Challenges/04-Fourth-deliverable-challenge/src/public/index.js"></script>
+{{!--
+<script src="/socket.io/socket.io.js" charset="utf-8"></script>
+<script src="index.js" charset="utf-8"></script> --}}
