--- a/Challenges/04-Fourth-deliverable-challenge/src/views/realTimeProducts.handlebars
+++ b/Challenges/04-Fourth-deliverable-challenge/src/views/realTimeProducts.handlebars
@@ -3,6 +3,7 @@
 <section>
     <div id="container-socket">
 
+        <button id='btn-remove'>remove product</button>
     </div>
     <form id="form-socket" action="">
         <input id="input-title" name="title" placeholder="add title product" type="text">
