implementacion de vistas del login

--- a/Pre-Entregas/02-Segunda-Pre-Entrega/src/views/carts.handlebars
+++ b/Pre-Entregas/02-Segunda-Pre-Entrega/src/views/carts.handlebars
@@ -1,4 +1,4 @@
-<div id="containerCarts" class="d-flex justify-content-center p-4">
+<div id="container-cart" class="d-flex justify-content-center p-4">
 </div>
 {{#if doc.products}}
 {{#each doc.products}}
