--- a/Pre-Entregas/02-Segunda-Pre-Entrega/src/views/login.handlebars
+++ b/Pre-Entregas/02-Segunda-Pre-Entrega/src/views/login.handlebars
@@ -6,4 +6,5 @@
 </form>
 
 <h2>USUARIO NUEVO?</h2>
-<button onclick="location.href='/api/views/register'">Ir a registro</button>
+<button onclick="location.href='/register'">Ir a registro</button>
+<button onclick="location.href='/api/users/register-github'"> Iniciar sesion con github</button>
