--- a/App/src/views/login.handlebars
+++ b/App/src/views/login.handlebars
@@ -6,5 +6,5 @@
 </form>
 
 <h2>USUARIO NUEVO?</h2>
-<button onclick="location.href='/register'">Ir a registro</button>
+<button onclick="location.href='/api/register'">Ir a registro</button>
 <button onclick="location.href='/api/users/register-github'"> Iniciar sesion con github</button>
